--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     ansi:
       enabled: always
   application:
-    name: user-service
+    name: catalog-service
   datasource:
     url: jdbc:h2:mem:test;MODE=MySQL
     driver-class-name: org.h2.Driver
@@ -34,7 +34,3 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
-
-token:
-  exp: 864000000
-  secret: metacoding
